--- a/Samples/CodeGenerationSample/Views/MainWindow.xaml
+++ b/Samples/CodeGenerationSample/Views/MainWindow.xaml
@@ -21,8 +21,12 @@
         <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
             <TextBlock Text="{Binding Title}" FontSize="32"/>
             <Button Content="Update Title" Command="{Binding UpdateTitleCommand}" Margin="0,10,0,0"/>
+            <CheckBox IsChecked="{Binding CanExecute}" Content="Can execute?" Margin="0,10,0,0"/>
+            <TextBox x:Name="TextBox" Margin="0,10,0,0" />
+            <Button Content="Update Title Generic" Command="{Binding UpdateTitleGenericCommand}" CommandParameter="{Binding ElementName=TextBox,Path=Text}" Margin="0,10,0,0"/>
         </StackPanel>
 
+        
         <StatusBar Grid.Row="1">
             <StatusBarItem>
                 <ProgressBar Height="25" Width="150" IsIndeterminate="True" Visibility="{Binding IsBusy, Converter={StaticResource BooleanToVisibilityConverter}}"/>
